fixed end screen margins

--- a/templates/storyscreen.html
+++ b/templates/storyscreen.html
@@ -12,12 +12,12 @@
       /* CSS for the image container */
       .body-container {
         text-align: center; /* Center-align the container content */
+        margin-top: 50px;
       }
       body {
         background-color: #f1e0d4df;
         background-size: cover;
       }
-
       .image-container {
         display: flex; /* Display images in a row */
         flex-wrap: wrap; /* Wrap images to the next line if there's not enough space */
