--- a/static/css/creators.css
+++ b/static/css/creators.css
@@ -1,196 +1,156 @@
-.creators {
-    background-color: #f1e0d4df;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
+
+.welcome-page {
+  background-color: #f1e0d4df;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.welcome-page .overlap-wrapper {
+  background-color: #f1e0d4df;
+  width: 100%;
+  height: 100%;
+}
+
+.welcome-page .overlap {
+  position: relative;
+  height: 832px;
+}
+nav {
+  background-color: #433128;
+  width: 100%;
+  height: 150px;
+  margin: 0px;
+  z-index: 100;
+  position: relative;
+}
+.welcome-page .overlap-group {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -90px;
+  left: 0;
+}
+
+.welcome-page .text-wrapper {
+  position: absolute;
+  width: 55%;
+  height: 35%;
+  top: 80%;
+  left: 23%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
+  color: #423127;
+  font-size: 25px;
+  text-align: center;
+  letter-spacing: 0.6px;
+  line-height: 25px;
   
-  .creators .div {
-    background-color: #f1e0d4df;
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
+}
+.welcome-page .image {
+  position: absolute;
+  width: 90%;
+  height: 110%;
+  scale: 30%;
+  top: 30px;
+  left: 75px;
+  z-index: 1;
+}
+.welcome-page .vector {
+  position: absolute;
+  width: 30%;
+  height: 40%;
+  bottom: 0px;
+  right: 0px;
+}
+
+.welcome-page .img {
+  position: absolute;
+  width: 28%;
+  height: 28%;
+  bottom: 0px;
+  right: 0px;
+}
+
+.welcome-page .vector-2 {
+  position: absolute;
+  width: 20%;
+  height: 20%;
+  bottom: 0px;
+  right: 0px;
+}
+
+.welcome-page .vector-3 {
+  position: absolute;
+  width: 30%;
+  height: 50%;
+  top: 0px;
+  left: 0px;
+}
+
+.welcome-page .vector-4 {
+  position: absolute;
+  width: 25%;
+  height: 45%;
+  top: 0px;
+  left: 0px;
+  float: left;
+}
+
+.welcome-page .div {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 700;
+  color: #423127;
+  font-size: 80px;
+  text-align: center;
+  letter-spacing: 1.6px;
+  line-height: 10px;
+}
+
+.welcome-page .group {
+  position: absolute;
+  width: 30%;
+  height: 20%;
+  top: 15%;
+  left: 35%;
+}
+
+.welcome-page .hackgt-logo {
+  position: absolute;
+  width: 200%;
+  height: 35%;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.welcome-page .overlap-2 {
+  position: absolute;
+  width: 147px;
+  height: 149px;
+  top: 497px;
+  left: 184px;
+}
+
+a img {
+  width: 150px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio for responsive design */
+  border: 0px;
+  float: right;
+  margin: 0px;
+}
   
-  .creators .overlap-group {
-    position: absolute;
-    width: 500px;
-    height: 352px;
-    top: 700px;
-    right:0px;
-    background-image: url(./img/vector-6.svg);
-    background-size: 100% 100%;
-  }
-  
-  .creators .vector {
-    position: absolute;
-    width: 90%;
-    height: 90%;
-    top: 35px;
-    right: 0px;
-  }
-  
-  .creators .img {
-    position: absolute;
-    width: 80%;
-    height: 80%;
-    top: 70px;
-    right: 0px;
-  }
-  
-  .creators .overlap {
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    top: -7px;
-    left: 0;
-  }
-  
-  .creators .overlap-2 {
-    position: absolute;
-    width: 100%;
-    height: 40%;
-    top: 0;
-    left: 0;
-  }
-  
-  .creators .vector-2 {
-    position: absolute;
-    width: 444px;
-    height: 327px;
-    top: 94px;
-    left: 0;
-  }
-  
-  .creators .vector-3 {
-    position: absolute;
-    width: 384px;
-    height: 241px;
-    top: 114px;
-    left: 0;
-  }
-  
-  .creators .rectangle {
-    position: absolute;
-    width: 100%;
-    height: 140px;
-    top: 0;
-    left: 0;
-    background-color: #423127;
-  }
-  
-  .creators .nav-nav-menu {
-    display: flex;
-    width: 50%;
-    height: 35px;
-    align-items: flex-start;
-    gap: 100px;
-    position: absolute;
-    top: 45px;
-    left: 57%;
-  }
-  
-  .creators .nav-list-item {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px;
-    position: relative;
-    flex: 0 0 auto;
-    background-color: #775e50;
-    border-radius: 25px;
-  }
-  
-  .creators .list-item {
-    position: relative;
-    width: fit-content;
-    margin-top: -1px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 400;
-    color: #c9ac9c;
-    font-size: 33px;
-    text-align: center;
-    letter-spacing: 0.66px;
-    line-height: 10px;
-    white-space: nowrap;
-  }
-  
-  .creators .list-item-wrapper {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px;
-    background-color: #775e50;
-    border-radius: 25px;
-    position: relative;
-    flex: 0 0 auto;
-  }
-  
-  .creators .nav-list-item-2 {
-    position: relative;
-    flex: 0 0 auto;
-  }
-  
-  .creators .group {
-    position: absolute;
-    width: 300px;
-    height: 89px;
-    top: 41px;
-    left: 35px;
-  }
-  
-  .creators .book-of-art {
-    position: absolute;
-    width: 182px;
-    height: 52px;
-    top: 3px;
-    left: 2px;
-  }
-  
-  .creators .group-2 {
-    position: absolute;
-    width: 56px;
-    height: 53px;
-    top: 0;
-    left: 208px;
-  }
-  
-  .creators .text-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 260px;
-    left: -8px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 700;
-    color: #423127;
-    font-size: 80px;
-    text-align: center;
-    letter-spacing: 1.6px;
-    line-height: 10px;
-  }
-  
-  .creators .group-3 {
-    position: absolute;
-    width: 495px;
-    height: 160px;
-    top: 195px;
-    left: 474px;
-  }
-  
-  .creators .p {
-    position: absolute;
-    top: 397px;
-    left: 455px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 500;
-    color: #423127;
-    font-size: 30px;
-    letter-spacing: 0.6px;
-    line-height: 10px;
-    white-space: nowrap;
-  }
-  
+a {
+  width: 50px; /* Adjust the width as needed */
+  height: 50px; /* Maintain aspect ratio for responsive design */
+  border: 0px;
+  float: right;
+  margin-top: 0px;
+}
