--- a/templates/creators.html
+++ b/templates/creators.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/globals.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/creators.css') }}">
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   </head>
   <body>
@@ -16,14 +16,15 @@
       <div class="overlap-wrapper">
         <div class="overlap">
           <div class="overlap-group">
-            <p class="text-wrapper">creators info</p>
+            <p class="text-wrapper">From left to right here are our creators: Tomas Casserly, Sanshubh Kukutla, Ananya Pattamatta, Jason Randolph</p>
+            <img class="image" src="{{ url_for('static', filename='images/creators.png') }}" />
             <img class="vector" src="{{ url_for('static', filename='images/vector-6.svg') }}" />
             <img class="img" src="{{ url_for('static', filename='images/vector-4-1.svg') }}" />
             <img class="vector-2" src="{{ url_for('static', filename='images/vector-5-1.svg') }}" />
             <img class="vector-3" src="{{ url_for('static', filename='images/vector-7-1.svg') }}" />
             <img class="vector-4" src="{{ url_for('static', filename='images/vector-8-1.svg') }}" />
             <div class="div">Creators</div>
-            <img class="group" src="{{ url_for('static', filename='images/group-3.png') }}" />
+            <img class="group" src="{{ url_for('static', filename='images/group-4.png') }}" />
           </div>
         </div> 
       </div>  
