minor wording change

--- a/templates/creators.html
+++ b/templates/creators.html
@@ -16,7 +16,7 @@
       <div class="overlap-wrapper">
         <div class="overlap">
           <div class="overlap-group">
-            <p class="text-wrapper">From left to right here are our creators: Tomas Casserly, Sanshubh Kukutla, Ananya Pattamatta, Jason Randolph</p>
+            <p class="text-wrapper">From left to right, here are our creators:<br> Tomas Casserly, Sanshubh Kukutla, Ananya Pattamatta, Jason Randolph</p>
             <img class="image" src="{{ url_for('static', filename='images/creators.png') }}" />
             <img class="vector" src="{{ url_for('static', filename='images/vector-6.svg') }}" />
             <img class="img" src="{{ url_for('static', filename='images/vector-4-1.svg') }}" />
